Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.xx
DATE xx/xx/2009
23rd Alpha Release

NEWS:

NEW: [features/improvments]


BUG FIXES:
+Update window being shown at same time as splash window causing lockups.
+Fix trim trailing whitespace from getting the wrong text position when certain
unicode characters are present.

#-----------------------------------------------------------------------------#

VERSION 0.4.40
DATE 01/02/2009
22nd Alpha Release

NEWS:

This is the first release of 2009. It was mostly focused on internal cleanup and
api refactoring. Through this a number of bugs have been fixed and a number of
existing features have recieved some refinements. The most noteable changes
are listed below.

NEW: [features/improvements]
+Some improvements to the Python autocompletion.
+Comment/Uncomment are now combined into a single toggle action
 (modified patch from Giuseppe "Cowo" Corbelli).
+When mixed eol characters are detected a dialog warning of it is now shown,
 that offers to convert them instead of toggling on eol visibility as it
 previously did, since this was found to be confusing to many.
+Add option to enable/disable checking of eol characters.
+Add menu shortcut for toggle fold.
+Add a verbose debug mode for view stack tracebacks in editra log messages.
+Updated (Italian, Japanese, Latvian, Polish, Russian, Spanish, Turkish) Translations.
+Reuse existing find results screens more effectively.
+New version of Launch with support for R.

BUG FIXES:
+Fix find options not properly being syncronized between dialog and find bar.
+Fix event handlers not properly getting connected when going from 2 -> 1 open windows.
+Fix eol mode settings in preferences.
+Fix search bar text not being colored properly on msw/gtk.